@startuml

title __REPOSITORY's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.repository {
        class RevisionRepository {
            {static} - INSERT_REVISION_NEW : String
            {static} - SELECT_REVISION_LAST_ENTERED : String
            {static} - SELECT_REVISIONS_FROM_TIMESTAMP : String
            + RevisionRepository()
            + getLastRevisionEntered()
            + getRevisionsInTimeInterval()
            + insertNewRevision()
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.repository {
        class RevisionRowMapper {
            + mapRow()
        }
      }
    }
  }
  

  RevisionRepository -up-|> NamedParameterJdbcDaoSupport
  RevisionRepository +-down- RevisionRowMapper
  RevisionRowMapper -up-|> RowMapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
